# lsys

./: .gitignore  Cargo.toml  Dockerfile  README.MD  build.cmd  build.sh  docs.json
examples/lsys-actix-web/: .env  Cargo.toml  README.MD
examples/lsys-actix-web/config/: app.toml
examples/lsys-actix-web/http/jwt/: user_login.http  user_mobile.http  user_rbac.http  user_sender_sms.http
examples/lsys-web-module-oauth/: Cargo.toml  README.MD
examples/lsys-web-module-oauth/src/module/: wechat.rs
examples/lsys-web-subapp-demo/: Cargo.toml  README.MD
examples/lsys-web-subapp-demo/src/access/: res_data.rs
lsys-app/: Cargo.toml
lsys-app/src/dao/: mod.rs  session.rs
lsys-app/src/dao/app/: apps.rs  mod.rs  oauth.rs
lsys-app/src/model/: app_const.rs  app_model.rs
lsys-core/: Cargo.toml  README.MD
lsys-core/src/: app_core.rs  lib.rs  macros.rs  utils.rs  valid_code.rs
lsys-core/src/cache/: clear.rs  macros.rs  mod.rs
lsys-rbac/: Cargo.toml  README.md
lsys-rbac/src/dao/: mod.rs
lsys-rbac/src/dao/rbac/: access.rs  cache.rs  data.rs  macros.rs  mod.rs  res.rs  role.rs  tags.rs
lsys-rbac/src/model/: rbac_model.rs
lsys-web-subapp-decode/: Cargo.toml  README.MD
lsys-web-subapp-decode/src/: lib.rs
lsys-web-subapp-decode/src/access/: res_data.rs
lsys-web-subapp-decode/src/handler/: subapp.rs
server/: .clippy.toml  .gitignore  Cargo.toml  Dockerfile  README.MD  sql_merge.cmd  sql_merge.sh  sqlx-data.json
server/assets/: tables.sql
server/examples/lsys-actix-web/: .env  .gitignore  Cargo.toml  README.MD
server/examples/lsys-actix-web/config/: app.toml  oauth.toml
server/examples/lsys-actix-web/locale/: README.MD
server/examples/lsys-actix-web/logs/: README.MD
server/examples/lsys-actix-web/src/: lib.rs  main.rs
server/examples/lsys-actix-web/static/: 404.html  index.html  welcome.html
server/examples/lsys-web-module-oauth/: Cargo.toml  README.MD
server/examples/lsys-web-module-oauth/src/: lib.rs
server/examples/lsys-web-subapp-demo/: Cargo.toml  README.MD
server/lsys-access/: Cargo.toml  README.MD  tables.sql
server/lsys-access/src/dao/: auth.rs  cache.rs  mod.rs  oauth.rs  result.rs  session.rs
server/lsys-access/src/model/: access_const.rs  access_model.rs  mod.rs
server/lsys-app/: Cargo.toml  README.MD  tables.sql
server/lsys-app-barcode/: Cargo.toml  README.MD  tables.sql
server/lsys-app-barcode/src/dao/: barcode.rs  barcode_core.rs  barcode_dao.rs  cache.rs  create.rs  logger.rs  mod.rs  parse.rs  result.rs
server/lsys-app-barcode/src/model/: barcode_const.rs  barcode_model.rs  mod.rs
server/lsys-app-notify/: Cargo.toml  README.MD  tables.sql
server/lsys-app-notify/src/dao/: mod.rs  notify.rs  notify_task.rs  record.rs  result.rs
server/lsys-app-notify/src/model/: app_const.rs  app_model.rs
server/lsys-app-sender/: Cargo.toml  README.MD  tables.sql
server/lsys-app-sender/src/: lib.rs
server/lsys-app-sender/src/dao/: logger.rs  message_cancel.rs  message_logs.rs  message_reader.rs  message_tpls.rs  mod.rs  result.rs  sender_config.rs  sender_task.rs  sender_tpl_config.rs  sender_wait.rs
server/lsys-app-sender/src/model/: sender_const.rs  sender_model.rs
server/lsys-app/src/dao/: cache.rs  logger.rs  mod.rs  result.rs  session.rs
server/lsys-app/src/model/: app.rs  app_const.rs  app_model.rs  mod.rs
server/lsys-core/: Cargo.toml  README.MD
server/lsys-core-macros/: Cargo.toml
server/lsys-core-macros/src/: lib.rs
server/lsys-core/src/: app_core.rs  config.rs  fluent_message.rs  lib.rs  listen_notify.rs  macros.rs  utils.rs
server/lsys-core/src/app_core/: core.rs  mod.rs  result.rs
server/lsys-core/src/cache/: clear.rs  mod.rs
server/lsys-core/src/config/: mod.rs  result.rs
server/lsys-core/src/db/: macros.rs  mod.rs  sql_quote.rs
server/lsys-core/src/fluents/: bundle.rs  message.rs  mod.rs  result.rs
server/lsys-core/src/listen_notify/: mod.rs  result.rs
server/lsys-core/src/remote_notify/: README.MD  mod.rs  result.rs
server/lsys-core/src/task/: mod.rs  task_executor.rs
server/lsys-core/src/task_dispatch/: mod.rs  task_executor.rs  task_notify.rs
server/lsys-core/src/timeout_task/: mod.rs  task_executor.rs
server/lsys-core/src/utils/: macros.rs  mod.rs  op_env.rs  page.rs  string.rs  string_clear.rs  tera_filter.rs  time.rs  vec.rs
server/lsys-core/src/valid_code/: mod.rs  result.rs  valid_data_random.rs
server/lsys-core/src/valid_param/: macros.rs  mod.rs  result.rs
server/lsys-docs/: Cargo.toml  README.MD  d2c_config.toml  tables.sql
server/lsys-docs/docs/: DOC1.MD  menu.json
server/lsys-docs/src/: lib.rs
server/lsys-docs/src/dao/: docs.rs  git.rs  logger.rs  mod.rs  result.rs  task.rs
server/lsys-docs/src/model/: doc_const.rs  doc_model.rs  mod.rs
server/lsys-lib-area/: .gitignore  Cargo.toml  README.MD  sqlite_source.cmd  sqlite_source.sh
server/lsys-lib-area/data/: README.MD
server/lsys-lib-area/examples/axum/: Cargo.toml
server/lsys-lib-area/src/: build.rs  c_lib.rs  lib.rs
server/lsys-lib-area/src/dao/: area.rs  area_code.rs  area_geo.rs  mod.rs  utils.rs
server/lsys-lib-area/tests/: test.rs
server/lsys-lib-area/wrappers/c_dome/: CMakeLists.txt  main.c
server/lsys-lib-area/wrappers/php/: .gitignore  README.MD  build.cmd  build.sh  config.m4  config.w32  lib_area.api.php  lib_area.c  lib_area.stub.php  lib_area_arginfo.h  lib_area_arginfo_7.h  lib_area_class.c  (+5 more)
server/lsys-lib-sms/: Cargo.toml  README.MD
server/lsys-lib-sms/src/: lib.rs
server/lsys-lib-sms/tests/: sender_aliyun.rs  sender_cloopen.rs  sender_huawei.rs  sender_jdcloud.rs  sender_netease.rs  sender_tencent.rs  test.rs
server/lsys-logger/: Cargo.toml  README.MD  tables.sql
server/lsys-notify/: Cargo.toml
server/lsys-rbac/: Cargo.toml  README.md  d2c_config.toml  tables.sql
server/lsys-sender/: Cargo.toml  README.MD
server/lsys-setting/: Cargo.toml  README.MD  tables.sql
server/lsys-user/: Cargo.toml  tables.sql
server/lsys-user/tests/: test.rs
server/lsys-web/: Cargo.toml  README.MD  tables.sql
server/lsys-web/res_op/: user.json
server/lsys-web/src/: lib.rs
(+2278 files in other folders)
