[package]
name = "lsys-app"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { version = "0.0.1", path = "../lsys-core"}
lsys-user = { version = "0.0.1", path = "../lsys-user"}
pin-project = "1.0.*"
futures-util="0.3.*"
serde={ version = "1.0.*"}
serde_json="1.0.*"


tokio = {version="~1.24.0"}

#db
sqlx = {version = "0.6.1",features = [ "mysql","runtime-tokio-native-tls","offline"]}
sqlx-model = {version = "0.1.3", default-features=false,features = [ "sqlx-mysql"]}


#日志
tracing = {version="0.1.*",features=["log"]}# log-always 保持log的输出 当使用tracing时会出现两次



fluent-syntax="0.11.0"
fluent = "0.16.0"


captcha = "0.0.9"
redis = { version = "~0.22.1", features = ["tokio-comp","connection-manager"] }

async-trait = "0.1.57"

regex = "~1.7.0"


rand = "~0.8.0"
md5 = "0.7.0"