[package]
name = "lsys-core"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
pin-project = "~1.0.*"
futures-util="~0.3.*"
serde={ version = "~1.0.*" }
serde_json="~1.0.*"
dotenv = "~0.15.*"

tokio = {version="~1.25.*",features=["fs"]}

redis = { version = "~0.22.1", features = ["tokio-comp","connection-manager"] }


lexical-core="~0.8.*"
pin-project-lite = "~0.2.*"
#db
sqlx = {version = "~0.6.*",features = ["runtime-tokio-native-tls","offline"]}
sqlx-model = {version = "~0.1.3", default-features=false}
simple_asn1="~0.6.*"
html-escape="~0.2.*"

#客户端
reqwest = { version = "~0.11.*", features = ["json","stream"] }
async-stream = "~0.3.*"
log = "~0.4.*" # 使用trace中宏 这里可以不要
serde_urlencoded="~0.7.*"

#日志
tracing = {version="~0.1.*",features=["log"]}# log-always 保持log的输出 当使用tracing时会出现两次

tracing-futures = { version = "~0.2.*",features = ["futures-03"] }
tracing-attributes ="~0.1.*" #日志属性宏
tracing-appender="~0.2.*"#写日志文件
tracing-serde ="~0.1.*"#可序列化变量赋值
tracing-subscriber = {version="~0.3.*",features=["env-filter"]}

#模板
tera = "~1.17.*"

#graylog 使用
#tracing-gelf = "0.4"
#tracing-log="*"

#代替标准库的锁,无中毒版本
parking_lot = "~0.12.*"

fluent-syntax="~0.11.*"
fluent = "~0.16.*"
unic-langid={version="~0.9.*",features=["unic-langid-macros"]}
intl-memoizer="~0.5.*"


async-trait = "~0.1.*"


rand = "~0.8.*"


config = "~0.13.*"


hashlink="~0.8.*"
hostname = "~0.3.*"
