[package]
name = "lsys-rbac"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]

redis = { version = "~0.22.1", features = ["tokio-comp","connection-manager"] }

lsys-core = { version = "~0.0.*", path = "../lsys-core"}
sqlx = {version = "~0.6.*",features = [ "mysql","runtime-tokio-native-tls","offline"]}
sqlx-model = {version = "~0.1.3", default-features=false,features = ["sqlx-mysql"]}


tokio = {version="~1.25.0", features = ["macros"]}


serde={ version = "1.0.*" }
serde_json="1.0.*"


fluent = "~0.16.*"
fluent-syntax="~0.11.*"

tracing = {version="~0.1.*"}


config = "~0.13.*"


async-trait = "~0.1.*"