[package]
name = "lsys-web-subapp-decode"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-rbac = { version = "0.0.1", path = "../lsys-rbac"}
lsys-app = { version = "0.0.1", path = "../lsys-app"}
lsys-web = { version = "0.0.1", path = "../lsys-web"}
serde={ version = "1.0.*"}
serde_json="1.0.*"
#detect-image-zxing = { version = "0.0.0-beta.1", git = "https://github.com/shanliu/detect-image-data" }