[workspace]
resolver = "2"
members = [
    "lsys-core",
    "lsys-rbac",
    "lsys-user",
    "lsys-web",
    "lsys-lib-sms",
    "lsys-lib-area",
    "lsys-setting",
    "lsys-logger",
    "lsys-app",
    "lsys-app-notify",
    "lsys-app-sender",
    "lsys-app-barcode",
    "lsys-docs",
    "examples/*",
]


[profile.release]
codegen-units = 1
