[workspace]
resolver = "2"
members = [
    "lsys-core-macros",
    "lsys-lib-sms",
    "lsys-lib-area",
    "lsys-core",
    "lsys-rbac",
    "lsys-user",
    "lsys-web",
    "lsys-setting",
    "lsys-logger",
    "lsys-app",
    "lsys-app-sender",
    "lsys-app-barcode",
    "lsys-access",
    "examples/*",
]


[profile.dev]
opt-level = 0
incremental = true
lto = false
debug = true
panic = 'unwind'
codegen-units = 256
rpath = false
overflow-checks = true

[profile.release]
opt-level = 3
lto = true
incremental = false