[package]
name = "lsys-actix-web"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { version = "0.0.1", path = "../../lsys-core" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-user = { version = "0.0.1", path = "../../lsys-user"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-app = { version = "0.0.1", path = "../../lsys-app"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-web = { version = "0.0.1", path = "../../lsys-web"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-web-module-oauth = { version = "0.0.1", path = "../lsys-web-module-oauth"}
lsys-web-subapp-demo = { version = "0.0.1", path = "../lsys-web-subapp-demo"}

actix="~0.13.0"
actix-web = "4.3.0"
actix-utils = "~3.0.*"
actix-service = "~2.0.*"#中间件等辅助宏
actix-web-validator="~5.0.1"
actix-multipart = "0.5.0"
actix-files = "~0.6.0"
actix-web-actors = "4.1.0"

pin-project = "~1.0.*"


jsonwebtoken  = "~8.2.0"
serde={ version = "~1.0.*"}
serde_json="~1.0.*"
serde_urlencoded="~0.7"
form_urlencoded = "~1.1.0"
tera = "~1.17.0"


#日志
tracing = {version="~0.1.*",features=["log"]}# log-always 保持log的输出 当使用tracing时会出现两次

tracing-futures = { version = "~0.2.*",features = ["futures-03"] }
tracing-attributes ="~0.1.22" #日志属性宏
tracing-appender="~0.2.2"#写日志文件
tracing-serde ="~0.1.3"#可序列化变量赋值
tracing-subscriber = {version="~0.3.11",features=["env-filter"]}


futures-util="~0.3.*"
reqwest = { version = "~0.11.*", features = ["json","stream"] }
md5 = "~0.7.0"
mime = "~0.3.16"
nanoid = "~0.4.0"


[dev-dependencies]
actix-rt="~2.8.0"
cargo-watch = "8.3.0" #cargo watch -x run




#[profile.release]
#panic = "unwind"

# [profile.dev]
# split-debuginfo = "unpacked"
