[package]
name = "lsys-web-module-oauth"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-user = { version = "0.0.1", path = "../../lsys-user"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-web = { version = "0.0.1", path = "../../lsys-web"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
serde={ version = "1.0.*"}
serde_json="1.0.*"
#日志
tracing = {version="0.1.*",features=["log"]}# log-always 保持log的输出 当使用tracing时会出现两次
async-trait = "0.1.57"
config = "0.13.2"
# oauth 
labrador={ version = "0.2.2", features = [ "wechat"]} 


rand = "~0.8.*"

redis = { version = "~0.22"  }
