[package]
name = "lsys-access"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
tokio = { version = "~1.43.0" }
deadpool-redis = { version = "~0.19.0" }
redis = { version = "~0.28.2" }
lsys-core = { path = "../lsys-core" }
sqlx = { version = "~0.8.3", features = ["mysql", "runtime-tokio-native-tls"] }

async-trait = "~0.1.*"


serde = { version = "1.0.*" }
serde_json = "1.0.*"

tracing = { version = "~0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次
