[package]
name = "lsys-app-barcode"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { path = "../lsys-core" }
lsys-logger = { path = "../lsys-logger" }


tokio = { version = "~1.45.0" }

sqlx = { version = "~0.8.3", features = ["mysql", "runtime-tokio-native-tls"] }
async-trait = "~0.1.*"

serde = { version = "1.0.*" }
serde_json = "1.0.*"

image = { version = "0.25.1", default-features = false }
rxing = { version = "0.7.1", default-features = false, features = [
    "image",
    "svg_read",
] }
sha2 = "~0.10.8"
tracing = { version = "~0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次
