[package]
name = "lsys-app-notify"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { path = "../lsys-core" }     #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-logger = { path = "../lsys-logger" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-app = { path = "../lsys-app" }       #path 替换为 :,git = "https://github.com/shanliu/lsys"


serde = { version = "1.0.*" }
serde_json = "1.0.*"

async-trait = "~0.1.*"

chrono = { version = "~0.4.31" }
url = "2.5.0"
reqwest = { version = "~0.11.*" }
tokio = { version = "~1.36" }
deadpool-redis = { version = "~0.13" }
redis = { version = "~0.23", features = [
    "tokio-comp",
    "connection-manager",
    "aio",
] }
md5 = "~0.7.0"
#日志
tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次

futures = "0.3"


sqlx = { version = "~0.8.0", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "offline",
] }
sqlx-model = { version = "0.2.3", default-features = false, features = [
    "sqlx-mysql",
] }
