[package]
name = "lsys-app-sender"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { path = "../lsys-core" }             #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-setting = { path = "../lsys-setting" }       #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-logger = { path = "../lsys-logger" }         #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-lib-sms = { path = "../lsys-lib-sms" }       #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-app-notify = { path = "../lsys-app-notify" } #path 替换为 :,git = "https://github.com/shanliu/lsys"


chrono = { version = "~0.4.31" }
serde = { version = "1.0.*" }
serde_json = "1.0.*"
futures = "0.3"
tokio = { version = "~1.44" }
deadpool-redis = { version = "~0.13" }
redis = { version = "~0.23", features = [
    "tokio-comp",
    "connection-manager",
    "aio",
] }

sqlx = { version = "~0.6.3", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "offline",
] }
sqlx-model = { version = "0.2.3", default-features = false, features = [
    "sqlx-mysql",
] }

# mail send
lettre = { version = "~0.11", features = [
    "smtp-transport",
    "native-tls",
    "tokio1",
    "tokio1-native-tls",
    "builder",
] }


hostname = "~0.3.*"


config = "0.13.2"

#日志
tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次


#模板
tera = "1.17.0"

async-trait = "~0.1.*"


parking_lot = "~0.12.*"


rs-snowflake = "0.6.0"


regex = "1.8.4"


reqwest = { version = "~0.11.22", optional = true }

[features]
sms-aliyun = ["reqwest"]
sms-jdcloud = ["reqwest"]
sms-huawei = ["reqwest"]
sms-netease = ["reqwest"]
sms-cloopen = ["reqwest"]
sms-tencent = ["reqwest"]
