[package]
name = "lsys-app-sender"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-app = { path = "../lsys-app" }
lsys-core = { path = "../lsys-core" }
lsys-setting = { path = "../lsys-setting" }
lsys-logger = { path = "../lsys-logger" }
lsys-lib-sms = { path = "../lsys-lib-sms" }


chrono = { version = "~0.4.31" }
serde = { version = "1.0.*" }
serde_json = "1.0.*"
futures = "0.3"
tokio = { version = "~1.46.0" }
deadpool-redis = { version = "~0.21.0" }
redis = { version = "~0.31.0", features = [
    "tokio-comp",
    "connection-manager",
    "aio",
] }

sqlx = { version = "~0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }

lettre = { version = "0.10.4", features = [ #0.11 not wroking on msvc 14.44
    "smtp-transport",
    "native-tls",
    "tokio1",
    "tokio1-native-tls",
    "builder",
] } # mail send


hostname = "~0.4.0"


config = "~0.15"

#日志
tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次


#模板
tera = "1.17.0"

async-trait = "~0.1.*"


parking_lot = "~0.12.*"


rs-snowflake = "0.6.0"


regex = "1.8.4"


reqwest = { version = "~0.12.9", optional = true }

[features]
sms-aliyun = ["reqwest"]
sms-jdcloud = ["reqwest"]
sms-huawei = ["reqwest"]
sms-netease = ["reqwest"]
sms-cloopen = ["reqwest"]
sms-tencent = ["reqwest"]
