[package]
name = "lsys-app"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { path = "../lsys-core" }
lsys-user = { path = "../lsys-user" }     # OAUTH登录相关实现依赖
lsys-logger = { path = "../lsys-logger" } #path 替换为 :,git = "https://github.com/shanliu/lsys"

serde = { version = "1.0.*" }
serde_json = "1.0.*"

deadpool-redis = { version = "~0.13" }
redis = { version = "~0.23" }

#db
sqlx = { version = "~0.8.4", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "offline",
] }
sqlx-model = { version = "0.2.3", default-features = false, features = [
    "sqlx-mysql",
] }


#日志
tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次


async-trait = "0.1.57"

regex = "~1.10"


# rand = "~0.8.0"
md5 = "0.7.0"
