[package]
name = "lsys-app"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"

[dependencies]
lsys-core = { path = "../lsys-core" }
lsys-access = { path = "../lsys-access" } #完成OAUTH登录
lsys-logger = { path = "../lsys-logger" }

serde = { version = "1.0.*" }
serde_json = "1.0.*"

deadpool-redis = { version = "~0.21.0" }
redis = { version = "~0.31.0" }

sqlx = { version = "~0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }

tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次


async-trait = "0.1.57"


md5 = "0.7.0"


# notify 
chrono = { version = "~0.4.31" }
url = "2.5.0"
reqwest = { version = "~0.12.9", features = ["stream"] }
futures = "0.3"
