[package]
name = "lsys-core"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
futures-util = "~0.3.*"
dotenv = "~0.15.*"

tokio = { version = "~1.44", features = ["fs", "macros"] }
deadpool-redis = { version = "~0.13" }
redis = { version = "~0.23", features = [
    "aio",
    "tokio-comp",
    "connection-manager",
] }


serde = { version = "1.0.*" }
serde_json = "1.0.*"

#db
sqlx = { version = "~0.8.4", features = [
    "runtime-tokio-native-tls",
    "offline",
] }
sqlx-model = { version = "0.2.3", default-features = false }
log = "~0.4.*"

#日志
tracing = { version = "~0.1.*", features = [
    "log",
] } # log-always 保持log的输出 当使用tracing时会出现两次
tracing-attributes = "~0.1.*" #日志属性宏
tracing-appender = "~0.2.*" #写日志文件
tracing-subscriber = { version = "~0.3.*", features = ["env-filter"] }

#模板
tera = "~1.19"


#代替标准库的锁
parking_lot = "~0.12.*"


fluent = "~0.16.*"
unic-langid = { version = "~0.9.*", features = ["unic-langid-macros"] }
intl-memoizer = "~0.5.*"


async-trait = "~0.1.*"


rand = "~0.8.*"


config = "~0.14"


hashlink = "~0.9"
hostname = "~0.3.*"


chrono = "0.4.19"


rs-snowflake = "0.6.0"
crc32fast = "1.3.2"


num_cpus = "1.15.0"
