[package]
name = "lsys-core"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core-macros = { path = "../lsys-core-macros" }
futures-util = "~0.3.31"
dotenv = "~0.15.*"

tokio = { version = "~1.45.0", features = ["fs", "macros"] }
deadpool-redis = { version = "~0.20.0" }
redis = { version = "~0.29.0", features = [ # 根据 deadpool-redis 的版本适配 
    "aio",
    "tokio-comp",
    "connection-manager",
] }


serde = { version = "~1.0.*" }
serde_json = "~1.0.*"

#db
sqlx = { version = "~0.8.3", features = ["runtime-tokio-native-tls", "mysql"] }
#sqlx-model = { version = "0.2.3", default-features = false }
log = "~0.4.*"

#日志
tracing = { version = "~0.1.*", features = [
    "log",
] } # log-always 保持log的输出 当使用tracing时会出现两次
tracing-attributes = "~0.1.*" #日志属性宏
tracing-appender = "~0.2.*" #写日志文件
tracing-subscriber = { version = "~0.3.*", features = ["env-filter"] }

#模板
tera = "~1.20"


#代替标准库的锁
parking_lot = "~0.12.*"


fluent = "~0.16.*"
unic-langid = { version = "~0.9.*", features = ["unic-langid-macros"] }
intl-memoizer = "~0.5.2"


async-trait = "~0.1.83"


rand = "~0.9.0"


config = "~0.15"


hashlink = "~0.10"
hostname = "~0.4.0"


chrono = "~0.4.38"


rs-snowflake = "~0.6.0"
crc32fast = "~1.4.2"


num_cpus = "~1.16.0"

lazy_static = "1.5.0"


regex = "1.11.1"
