[package]
name = "lsys-docs"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { path = "../lsys-core" }
lsys-logger = { path = "../lsys-logger" } #path 替换为 :,git = "https://github.com/shanliu/lsys"

serde = { version = "1.0.*" }
serde_json = "1.0.*"

#db
sqlx = { version = "~0.6.3", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "offline",
] }
sqlx-model = { version = "0.2.3", default-features = false, features = [
    "sqlx-mysql",
] }

futures-util = "~0.3.*"

deadpool-redis = { version = "~0.13" }
redis = { version = "~0.23", features = [
    "tokio-comp",
    "connection-manager",
    "aio",
] }

#日志
tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次

tokio = { version = "~1.36" }


num_cpus = "1.15.0"

hostname = "~0.3.*"

git2 = "~0.18"


tempfile = "3.2.0"

url = "2.2.2"


regex = "~1.10"


walkdir = "*"

relative-path = "1.8.0"


async-trait = "~0.1.*"
