[package]
name = "lsys-docs"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { path = "../lsys-core" }
lsys-logger = { path = "../lsys-logger" }

serde = { version = "1.0.*" }
serde_json = "1.0.*"

#db
sqlx = { version = "~0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }

futures-util = "0.3.31"

deadpool-redis = { version = "~0.21.0" }
redis = { version = "~0.31.0", features = [
    "tokio-comp",
    "connection-manager",
    "aio",
] }

#日志
tracing = { version = "0.1.40" } # log-always 保持log的输出 当使用tracing时会出现两次

tokio = { version = "~1.45.0" }


num_cpus = "1.15.0"

hostname = "0.4.0"

git2 = "0.20.0"


tempfile = "3.10.1"

url = "2.2.2"


regex = "1.11.1"


walkdir = "2.5.0"

relative-path = "1.8.0"


async-trait = "~0.1.*"
