[package]
name = "lsys-lib-sms"
version = "0.1.1"
edition = "2021"
authors = ["liushan <shan.liu@msn.com>"]
license-file = "LICENSE"
description = "短信接口封装"
categories = ["web-programming"]
repository = "https://github.com/shanliu/lsys/tree/main/server/lsys-lib-sms"


[dependencies]
serde = { version = "~1.0.192" }
serde_json = "~1.0.108"
serde_urlencoded = { version = "~0.7.1" }
tracing = { version = "~0.1.40" }
gjson = "~0.8.1"
md5 = "~0.7.0"
rand = "~0.8.5"
ring = "~0.17.5"
base64 = { version = "~0.21.5" }
sha2 = { version = "~0.10.8" }
chrono = { version = "~0.4.31" }
hmac = { version = "~0.12.1" }
hex = { version = "~0.4.3" }
reqwest = { version = "~0.11.22" }


[dev-dependencies]
tokio = { version = "~1.36", features = ["test-util","full"] }

[features]
default = ["aliyun", "huawei", "tencent", "jdcloud", "netease", "cloopen"]
aliyun = []
huawei = []
tencent = []
jdcloud = []
netease = []
cloopen = []
