[package]
name = "lsys-logger"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { version = "0.0.1", path = "../lsys-core"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
serde={ version = "1.0.*"}
serde_json="1.0.*"

tokio = {version="~1.27"}

sqlx = {version = "~0.6.3",features = [ "mysql","runtime-tokio-native-tls","offline"]}
sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}

#日志
tracing = {version="0.1.*",features=["log"]}# log-always 保持log的输出 当使用tracing时会出现两次

tracing-futures = { version = "~0.2.*",features = ["futures-03"] }
tracing-attributes ="0.1.22" #日志属性宏
tracing-appender="0.2.2"#写日志文件
tracing-serde ="0.1.3"#可序列化变量赋值
tracing-subscriber = {version="0.3.11",features=["env-filter"]}


async-trait = "~0.1.*"
