[package]
name = "lsys-logger"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"

[dependencies]
lsys-core = { path = "../lsys-core" }
serde = { version = "1.0.*" }
serde_json = "1.0.*"

tokio = { version = "~1.45.0" }

sqlx = { version = "~0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }

#日志
tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次


async-trait = "~0.1.*"
