[package]
name = "lsys-rbac"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]

lsys-core = { path = "../lsys-core" }
lsys-logger = { path = "../lsys-logger" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
sqlx = { version = "~0.8.0", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "offline",
] }
sqlx-model = { version = "0.2.3", default-features = false, features = [
    "sqlx-mysql",
] }


tokio = { version = "~1.36", features = ["macros"] }
deadpool-redis = { version = "~0.13" }
redis = { version = "~0.23" }

serde = { version = "1.0.*" }
serde_json = "1.0.*"


tracing = { version = "~0.1.*" }


config = "~0.14"


async-trait = "~0.1.*"

async-recursion = "~1.0.0"
