[package]
name = "lsys-rbac"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]

lsys-core = { path = "../lsys-core" }
lsys-logger = { path = "../lsys-logger" }
sqlx = { version = "~0.8.3", features = ["mysql", "runtime-tokio-native-tls"] }


tokio = { version = "~1.44.0", features = ["macros"] }
deadpool-redis = { version = "~0.20.0" }
redis = { version = "~0.29.0" }

serde = { version = "1.0.*" }
serde_json = "1.0.*"


tracing = { version = "~0.1.*" }


config = "~0.15"


async-trait = "~0.1.*"
