[package]
name = "lsys-setting"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
lsys-core = { path = "../lsys-core" }
lsys-logger = { path = "../lsys-logger" }
serde = { version = "1.0.*" }
serde_json = "1.0.*"

tokio = { version = "~1.43.0" }

sqlx = { version = "~0.8.3", features = ["mysql", "runtime-tokio-native-tls"] }

#日志
tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次


async-trait = "~0.1.*"

deadpool-redis = { version = "~0.18" }
redis = { version = "~0.27.5" }
