[package]
name = "lsys-user"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
tokio = {version="~1.28"}
deadpool-redis = { version = "0.12" }
redis = { version = "~0.23"  }

lsys-core = {  path = "../lsys-core"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-setting = {  path = "../lsys-setting"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-logger = {  path = "../lsys-logger"}#path 替换为 :,git = "https://github.com/shanliu/lsys"
sqlx = {version = "~0.6.3",features = [ "mysql","runtime-tokio-native-tls","offline"]}
sqlx-model = {version = "~0.2.0", default-features=false,features = ["sqlx-mysql"]}

async-trait = "~0.1.*"


serde={ version = "1.0.*" }
serde_json="1.0.*"
futures-util="0.3.*"
pin-project = "1.1.*"


# rand = "~0.8.*"

fluent = "~0.16.*"
fluent-syntax="~0.11.*"
intl-memoizer="~0.5.*"
unic-langid={version="~0.9.*",features=["unic-langid-macros"]}


md5 = "~0.7.*"
base64 = "0.21.0"



tracing = {version="~0.1.*",features=["log"]}# log-always 保持log的输出 当使用tracing时会出现两次
tracing-futures = { version = "~0.2.*",features = ["futures-03"] }
tracing-serde ="~0.1.*"#可序列化变量赋值


hashlink="~0.8.*"

hostname = "~0.3.*"


ip2location = "~0.4.*"



regex = "~1.8.0"

config = "~0.13.*"


[dev-dependencies]
tokio = {version="~1.28.0",features=["test-util"]}
