[package]
name = "lsys-user"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
tokio = { version = "~1.45.0" }
deadpool-redis = { version = "~0.20.0" }
redis = { version = "~0.29.0" }
lsys-core = { path = "../lsys-core" }
#lsys-app = { path = "../lsys-app" }
lsys-setting = { path = "../lsys-setting" }
lsys-logger = { path = "../lsys-logger" }
lsys-access = { path = "../lsys-access" }
sqlx = { version = "~0.8.3", features = ["mysql", "runtime-tokio-native-tls"] }


async-trait = "~0.1.*"


serde = { version = "1.0.*" }
serde_json = "1.0.*"
futures-util = "0.3.*"


md5 = "~0.7.*"
base64 = "0.22.1"


tracing = { version = "~0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次


hashlink = "~0.10"

hostname = "~0.4.*"


ip2location = "~0.5"


config = "~0.15"


[dev-dependencies]
tokio = { version = "~1.45.0", features = ["test-util"] }
