[package]
name = "lsys-web"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
area-db = { version = "~0.1.2", default-features = false, features = [
    "data-csv",
    "index-disk",
] }

lsys-core = { path = "../lsys-core" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-rbac = { path = "../lsys-rbac" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-user = { path = "../lsys-user" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-app = { path = "../lsys-app" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-app-sender = { path = "../lsys-app-sender", features = [
    "sms-aliyun",
    "sms-jdcloud",
    "sms-huawei",
    "sms-jdcloud",
    "sms-netease",
    "sms-tencent",
    "sms-cloopen",
] } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-setting = { path = "../lsys-setting" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-logger = { path = "../lsys-logger" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-docs = { path = "../lsys-docs" } #path 替换为 :,git = "https://github.com/shanliu/lsys"
lsys-app-notify = { path = "../lsys-app-notify" } #path 替换为 :,git = "https://github.com/shanliu/lsys"

futures-util = "0.3.*"
serde = { version = "1.0.*" }
serde_json = "1.0.*"
dotenv = "0.15.*"

tokio = { version = "~1.36", features = ["fs"] }
deadpool-redis = { version = "~0.13" }
redis = { version = "~0.23" }


form_urlencoded = "~1.2.0"


pin-project-lite = "0.2.9"
#db
sqlx = { version = "~0.6.3", features = [
    "mysql",
    "runtime-tokio-native-tls",
    "offline",
] }
sqlx-model = { version = "0.2.3", default-features = false, features = [
    "sqlx-mysql",
] }
# simple_asn1 = "0.6.2"
# html-escape = "~0.2.*"

#客户端
reqwest = { version = "~0.11.*", features = ["json", "stream"] }

log = "0.4.17"           # 使用trace中宏 这里可以不要
serde_urlencoded = "0.7"

#日志
tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次

#模板
tera = "1.17.0"

#graylog 使用
#tracing-gelf = "0.4"
#tracing-log="*"

#代替标准库的锁
parking_lot = "0.12.1"


fluent = "0.16.0"


mime = "0.3.16"


#graylog 使用
#tracing-gelf = "0.4"
#tracing-log="*"


ip2location = "~0.5.0"

captcha = "0.0.9"

async-trait = "0.1.57"

config = "~0.14"

# mail send
# lettre = { version = "~0.11", features = [
#     "smtp-transport",
#     "native-tls",
#     "tokio1",
#     "tokio1-native-tls",
#     "builder",
# ] }


# regex = "~1.10"


# lazy_static = "1.4.0"


# hostname = "~0.3.*"
