[package]
name = "lsys-web"
version = "0.0.1"
authors = ["liushan <shan.liu@msn.com>"]
edition = "2021"


[dependencies]
futures-util = "0.3.*"
serde = { version = "1.0.*" }
serde_json = "1.0.*"
dotenv = "0.15.*"

tokio = { version = "~1.45.0", features = ["fs"] }
deadpool-redis = { version = "~0.21.0" }
redis = { version = "~0.31.0" }

async-recursion = "~1.1.1"

form_urlencoded = "~1.2.0"


pin-project-lite = "0.2.9"
#db
sqlx = { version = "~0.8.6", features = ["mysql", "runtime-tokio-native-tls"] }


#客户端
reqwest = { version = "~0.12.9", features = ["json", "stream"] }

serde_urlencoded = "0.7"

#日志
tracing = { version = "0.1.*" } # log-always 保持log的输出 当使用tracing时会出现两次

tera = "1.17.0"

parking_lot = "0.12.1"

fluent = "0.17.0"

mime = "0.3.16"

ip2location = "~0.5.0"

captcha = "1.0.0"

async-trait = "0.1.57"

config = "~0.15"

lsys-core = { path = "../lsys-core" }
lsys-rbac = { path = "../lsys-rbac" }
lsys-access = { path = "../lsys-access" }
lsys-user = { path = "../lsys-user" }
lsys-app = { path = "../lsys-app" }
lsys-app-sender = { path = "../lsys-app-sender", features = [
    "sms-aliyun",
    "sms-jdcloud",
    "sms-huawei",
    "sms-jdcloud",
    "sms-netease",
    "sms-tencent",
    "sms-cloopen",
] }
lsys-setting = { path = "../lsys-setting" }
lsys-logger = { path = "../lsys-logger" }

lsys-lib-area = { default-features = false, features = [
    "data-csv",
    "index-disk",
], path = "../lsys-lib-area" }


lsys-docs = { path = "../lsys-docs", optional = true }
lsys-app-barcode = { path = "../lsys-app-barcode", optional = true }
image = { version = "0.25.1", default-features = false, optional = true }
base64 = { version = "~0.22.0", optional = true }
regex = "~1.11.1"


git2 = { version = "0.20.0", optional = true }

[features]
default = ["docs", "barcode"]
docs = ["lsys-docs", "git2"]
barcode = [
    "lsys-app-barcode",
    "image",
    "base64",
    "image/png",
    "image/webp",
    "image/jpeg",
]
